Change line and dot size

--- a/python/notebooks/caustics.ipynb
+++ b/python/notebooks/caustics.ipynb
@@ -232,7 +232,7 @@
     "intersections = get_intersections(line_coordinates)\n",
     "intersection_x, intersection_y = get_xy_intersection(intersections)\n",
     "# ax[1].scatter(intersection_x, intersection_y)\n",
-    "ax[1].plot(intersection_x, intersection_y, '-o', markersize=5)\n",
+    "ax[1].plot(intersection_x, intersection_y, '-o', markersize=2, linewidth=1)\n",
     "plt.show()\n"
    ]
   },
