--- a/python/notebooks/playground_jnt.ipynb
+++ b/python/notebooks/playground_jnt.ipynb
@@ -2,70 +2,226 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "id": "a42M43IPu1cD"
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import csv\n",
-    "import math\n",
+    "from heapq import merge\n",
     "import matplotlib.pyplot as plt\n",
-    "import sympy\n",
-    "import itertools\n",
-    "import pandas as pd"
+    "import string"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5 21 21 85 85]\n",
-      "1\n",
-      "2\n",
-      "7\n",
-      "8\n",
-      "13\n",
-      "14\n"
+      "12\n"
      ]
     }
    ],
    "source": [
-    "def get_binary_len(n:int) -> int:\n",
-    "    return len(np.binary_repr(n))\n",
+    "def is_Ag(n:int) -> bool:\n",
+    "    return n % 24 == 17\n",
     "\n",
     "def operation_v(n:int) -> int:\n",
     "    return 4*n+1\n",
     "\n",
-    "def operation_v_upto_binlen(n:int) -> int:\n",
-    "    binlen = get_binary_len(n)\n",
-    "    res = 1\n",
-    "    for i in range(0,binlen):\n",
+    "def operation_v_n_times(start:int, n:int) -> int:\n",
+    "    res = start\n",
+    "    for i in range(1, n):\n",
     "        res = operation_v(res)\n",
     "    return res\n",
     "\n",
-    "def generate_v_series(n:int) -> int:\n",
-    "    res = np.zeros(n, dtype=np.uint32)\n",
-    "    for i in range(0,n):\n",
-    "        res[i] = operation_v_upto_binlen(i+1)\n",
+    "def generate_v_series(start:int, n:int) -> list[int]:\n",
+    "    res = [0]*n\n",
+    "    for i in range(0, n):\n",
+    "        res[i] = operation_v_n_times(start, i+1)\n",
     "    return res\n",
     "\n",
+    "def remove_0mod3(v_series:list[int]) -> list[int]:\n",
+    "    res = []\n",
+    "    for i in v_series:\n",
+    "        if i%3 > 0:\n",
+    "            res.append(i)\n",
+    "    return res\n",
     "\n",
-    "print(generate_v_series(5))\n",
+    "def syr_min_1(v_series:list[int]) -> list[int]:\n",
+    "    res = []\n",
+    "    for i in v_series:\n",
+    "        if i%3 == 1:\n",
+    "            #Type C case\n",
+    "            res.append((4*i-1)//3)\n",
+    "        elif i%3 == 2:\n",
+    "            #Type A case\n",
+    "            res.append((2*i-1)//3)\n",
+    "    return res\n",
     "\n",
-    "print(get_binary_len(1))\n",
-    "print(get_binary_len(3))\n",
-    "print(get_binary_len(113))\n",
-    "print(get_binary_len(227))\n",
-    "print(get_binary_len(7281))\n",
-    "print(get_binary_len(14563))"
+    "def func(start:int, max_bin_len:int, x:int)->int:\n",
+    "    b=len(np.binary_repr(start))\n",
+    "    if is_Ag(start):\n",
+    "        x += 1\n",
+    "    v_series = generate_v_series(start, (max_bin_len-b)//2)\n",
+    "    #print(v_series)\n",
+    "    thinned_out_series = remove_0mod3(v_series)\n",
+    "    #print(thinned_out_series)\n",
+    "    syr_min1_series = syr_min_1(thinned_out_series)\n",
+    "    #print(syr_min1_series)\n",
+    "    #print(x)\n",
+    "    for i in syr_min1_series:\n",
+    "        if is_Ag(i):\n",
+    "            x += 1\n",
+    "        x = func(i, max_bin_len, x)\n",
+    "    return x\n",
+    "\n",
+    "start = 3\n",
+    "max_bin_len = 10\n",
+    "x = func(start, max_bin_len, 0)\n",
+    "print(x)\n",
+    "\n",
+    "x_val=[]\n",
+    "y_val=[]\n",
+    "\n",
+    "for mbl in range(5, 30+1):\n",
+    "    x_val.append(mbl)\n",
+    "    y = func(start, mbl, 0)\n",
+    "    y = y/(2**(mbl-3))\n",
+    "    y_val.append(y)\n",
+    "\n",
+    "\n",
+    "print(x_val)\n",
+    "print(y_val)\n",
+    "\n",
+    "plt.plot(x_val, y_val)  \n",
+    "plt.show()\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, 45, 181, 725]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def numberToBase(n, b):\n",
+    "    if n == 0:\n",
+    "        return [0]\n",
+    "    digits = []\n",
+    "    while n:\n",
+    "        digits.append(int(n % b))\n",
+    "        n //= b\n",
+    "    return digits[::-1]\n",
+    "\n",
+    "def operation_v(n:int) -> int:\n",
+    "    return 4*n+1\n",
+    "\n",
+    "def operation_v_upto_n(start:int, n:int) -> int:\n",
+    "    res = start\n",
+    "    for i in range(1, n):\n",
+    "        res = operation_v(res)\n",
+    "    return res\n",
+    "\n",
+    "def generate_v_series(start:int, n:int) -> list[int]:\n",
+    "    res = [0]*n\n",
+    "    for i in range(0, n):\n",
+    "        res[i] = operation_v_upto_n(start, i+1)\n",
+    "    return res\n",
+    "\n",
+    "def thin_out_2mod3(v_series:list[int]) -> list[int]:\n",
+    "    res = []\n",
+    "    for i in v_series:\n",
+    "        if i%3 == 2:\n",
+    "            res.append(i)\n",
+    "    return res\n",
+    "\n",
+    "def syr_min1(series:list[int]) -> list[int]:\n",
+    "    res = [0]*len(series)\n",
+    "    for idx, i in enumerate(series):\n",
+    "        res[idx] = (i*2-1)//3\n",
+    "    return res\n",
+    "\n",
+    "def rule2(series:list[int], v_series_2mod3:list[int]) -> list[int]:\n",
+    "    res = list()\n",
+    "    for idx, i in enumerate(series):\n",
+    "        if v_series_2mod3[idx]%8 == 5:\n",
+    "            res.append(int(i-1)//2)\n",
+    "    return res\n",
+    "\n",
+    "def count_17mod24(series:list[int]) -> int:\n",
+    "    res = 0\n",
+    "    for i in series:\n",
+    "        if i%24 == 17:\n",
+    "            res+=1\n",
+    "    return res\n",
+    "\n",
+    "start = 11\n",
+    "limit = 100\n",
+    "v_series = generate_v_series(start, limit)\n",
+    "v_series_2mod3 = thin_out_2mod3(v_series)\n",
+    "v_series_2mod3_syr_min1 = syr_min1(v_series_2mod3)\n",
+    "v_series_2mod3_syr_min1_rule2 = rule2(v_series_2mod3_syr_min1, v_series_2mod3)\n",
+    "#print(v_series)\n",
+    "#print(v_series_2mod3)\n",
+    "#print(v_series_2mod3_syr_min1)\n",
+    "#print(v_series_2mod3_syr_min1_rule2)\n",
+    "res = list(merge(v_series_2mod3_syr_min1, v_series_2mod3_syr_min1_rule2))\n",
+    "#print(res)\n",
+    "\n",
+    "l = len(res)\n",
+    "x = range(1, l+1)\n",
+    "y = [1]*l\n",
+    "colors = [\"black\"]*l\n",
+    "for idx, i in enumerate(res):\n",
+    "    if i%3 == 2:\n",
+    "        colors[idx]=\"orange\"\n",
+    "\n",
+    "#plt.scatter(x, y, s=16, c=colors, alpha=1)\n",
+    "#plt.axis('off')\n",
+    "#plt.show()\n",
+    "\n",
+    "#so you start with 1 \n",
+    "#You implement the V and Syr-1 \n",
+    "#You will count 0 number of type 17_24 in V(1)\n",
+    "#You move on to 3, do the V, and Syr-1 \n",
+    "#You will also find 0 type 17_24 in V(3) \n",
+    "#Then you get 17 which is a type 17_24 so you count it\n",
+    "#You do V (17) and keep going \n",
+    "#Etc\n",
+    "\n",
+    "start = 1\n",
+    "limit = 10\n",
+    "\n",
+    "\n",
+    "\n",
+    "v_series = generate_v_series(start, limit)\n",
+    "v_series_2mod3 = thin_out_2mod3(v_series)\n",
+    "v_series_2mod3_syr_min1 = syr_min1(v_series_2mod3)\n",
+    "v_series_2mod3_syr_min1_rule2 = rule2(v_series_2mod3_syr_min1, v_series_2mod3)\n",
+    "\n",
+    "print(generate_v_series(11,4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
